--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,7 @@
           <div class="container">
             <a href="#" class="brand-logo">Favourite Colours</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="https://github.com/stujo">GitHub</a></li>
+              <li><a href="https://github.com/stujo/sinatra-favourite-colour">GitHub</a></li>
               <% unless @skip_css %>
                 <li><a href="/nocss">No CSS</a></li>
               <% else %>
